@@ -1,123 +1,0 @@
-<metal:html>
-
-<metal:body use-macro="here/main_template/macros/master">
-
-<metal:main fill-slot="main"
-            tal:define="p_props here/portal_properties;
-                       ">
-
-  <metal:skin tal:condition="exists: here/portal_skins | nothing">
-    <div tal:condition="here/portal_skins/updateSkinCookie | nothing"
-          tal:define="dummy here/setupCurrentSkin">
-    </div>
-  </metal:skin>
-
-  <tal:block condition="isAnon">
-
-    <tal:block define="dummy python:request.RESPONSE.expireCookie('__ac',
-                                                                  path='/')" />
-
-    <h1 i18n:translate="heading_login_failure">Login failure</h1>
-
-    <p>
-      <span i18n:translate="description_login_failure">
-        You are not currently logged in. Your username and or password may be
-        incorrect. Your browser may also not be configured to accept HTTP
-        cookies. If you need help please contact
-      </span>
-      <a href="mailto:admin@here.com" title="Email Admin"
-        tal:attributes="href string:mailto:${p_props/email_from_address}"
-      tal:content="p_props/email_from_address">Email Admin</a>.
-    </p>
-    <p i18n:translate="">
-      help_password_forgotten
-      <tal:block i18n:name="link_password_forgotten"
-                 replace="string:${base_url}account_lost_password_form"/>
-    </p>
-  </tal:block><!-- isAnon -->
-
-  <tal:block condition="not: isAnon"
-             define="first_time python:(member.getProperty('login_time', None) ==
-                                       here.ZopeTime('2000/01/01'));
-                     dum_home mtool/createMemberArea">
-
-    <tal:block condition="first_time">
-      <div tal:define="now here/ZopeTime;
-                       dum_reg python:member.setProperties(last_login_time=now,
-                               login_time=now)" />
-
-      <h1>Welcome!</h1>
-      <p>This is the first time that you've logged in to <span
-      replace="p_props/title">Here</span>. Before you start exploring you need
-      to change your original password. This will ensure that the password we
-      sent you via email cannot be used in a malicious manner.</p>
-
-      <p>Please use the form below to change your password.</p>
-
-      <form action="change_password" method="post"
-            tal:attributes="action string:${base_url}change_password">
-        <input type="hidden" name="user" value=""
-               tal:attributes="value member" />
-        <input type="hidden" name="domains:tokens" value="" />
-        <input type="hidden" name="redirect" value=""
-               tal:attributes="value base_url" />
-
-      <table border="1" width="100%" cellspacing="1" cellpadding="1">
-
-       <tr valign="top" align="left">
-         <th>Username</th>
-         <td><span tal:replace="member">You</span></td>
-       </tr>
-
-       <tr valign="top" align="left">
-         <th>New password</th>
-         <td><input type="password" name="password" /></td>
-       </tr>
-
-       <tr valign="top" align="left">
-        <th>Confirm new password</th>
-        <td><input type="password" name="confirm" /></td>
-       </tr>
-
-       <tr>
-        <td></td>
-        <td>
-          <input type="submit" class="standalone" value="Change password" />
-        </td>
-       </tr>
-
-      </table>
-
-      </form>
-
-    </tal:block><!-- first_time -->
-
-    <tal:block condition="not: first_time">
-
-      <tal:block define="d_reg python:member.setProperties(
-                                      last_login_time=member.getProperty('login_time', None));
-                         ereg python:member.setProperties(
-                                     login_time=here.ZopeTime());
-                      "/>
-
-      <div tal:condition="request/came_from | nothing ">
-        <div tal:define="came_from python:request.get('came_from');
-                         response request/RESPONSE;
-                         dredirect python: response.redirect(came_from);
-                        " />
-      </div>
-
-      <h1 i18n:translate="heading_login_success">Login success</h1>
-      <p i18n:translate="description_login_success">
-         Welcome. You are currently logged in.
-      </p>
-
-   </tal:block><!-- not first_time -->
-
-  </tal:block><!-- not isAnon -->
-
-</metal:main>
-
-</metal:body>
-
-</metal:html>
