@@ -10,6 +10,7 @@ Bug fixes:
 - fix : update Zope-2.7.x -> Zope-2.8.x
 - fix : bug in getImgTag()
 - BBB : CPSDefault.utils.getHtmlBody
+- #852 : make logged_in more customizable
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 -
